[package]
name = "prima_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
imgui = { version = "0.9.0", features = ["tables-api"]}
glow = "0.10.0"
memoffset = "0.6.4"
sdl2 = "0.34.5"

[dev-dependencies]
glow = "0.10.0"
imgui-glow-renderer = { version = "0.9.0" }
sdl2 = { version = "0.34.5", features = ["bundled", "static-link"] }

glium = { version = "0.32.1", default-features = true }
clipboard = "0.5"
image = "0.23"

[features]
# Features here are used to opt-out of compiling code that depends on certain
# OpenGL features. If the features are enabled, the renderer will check that the
# feature is supported before attempting to use it. Only opt-out of any of these
# if you are certain you will only target platforms that lack the corresponding
# feature.
default = [
  "gl_extensions_support",
  "debug_message_insert_support",
  "bind_vertex_array_support",
  "vertex_offset_support",
  "clip_origin_support",
  "bind_sampler_support",
  "polygon_mode_support",
  "primitive_restart_support",
]
# Enable checking for OpenGL extensions
gl_extensions_support = []
# Support for `gl.debug_message_insert`
debug_message_insert_support = []
# Support for `glBindVertexArray`
bind_vertex_array_support = []
# Support for `glDrawElementsBaseVertex`
vertex_offset_support = []
# Support for `GL_CLIP_ORIGIN`
clip_origin_support = []
# Support for `glBindSampler`
bind_sampler_support = []
# Support for `glPolygonMode`
polygon_mode_support = []
# Support for `GL_PRIMITIVE_RESTART`
primitive_restart_support = []
